DecafParser.py
# Generated from Decaf.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'True'", "'False'", "'class'", "'Program'", 
                     "'if'", "'else'", "'for'", "'while'", "'return'", "'break'", 
                     "'continue'", "'boolean'", "'char'", "'int'", "'string'", 
                     "'void'", "'struct'", "'callout'", "';'", "'{'", "'}'", 
                     "'['", "']'", "'('", "')'", "','", "'\"'", "'''", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", 
                     "'>'", "'<'", "'>='", "'<='", "'='", "'+='", "'-='", 
                     "'=='", "'!='", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "CLASS", "PROGRAM", 
                      "IF", "ELSE", "FOR", "WHILE", "RETURN", "BREAK", "CONTINUE", 
                      "BOOLEAN", "CHAR", "INT", "STRING", "VOID", "STRUCT", 
                      "CALLOUT", "SEMICOLON", "LCURLY", "RCURLY", "LSQUARE", 
                      "RSQUARE", "LROUND", "RROUND", "COMMA", "QUOTES", 
                      "APOSTROPHE", "ADD", "SUB", "MULTIPLY", "DIVIDE", 
                      "REMINDER", "AND", "OR", "NOT", "GREATER_OP", "LESS_OP", 
                      "GREATER_eq_op", "LESS_eq_op", "EQUAL_OP", "ADD_eq_op", 
                      "SUB_eq_op", "EQUALITY_OP", "UNEQUALITY_OP", "POINT", 
                      "ID", "ALPHA", "DECIMAL_LITERAL", "DIGIT", "STRING_LITERAL", 
                      "ALPHA_NUM", "HEX_DIGIT", "LINE_COMMENT", "COMMENT", 
                      "NEWLINE", "WHITESPACE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_vardeclr = 2
    RULE_field_declr = 3
    RULE_array_id = 4
    RULE_field_var = 5
    RULE_var_id = 6
    RULE_struct_declr = 7
    RULE_method_declr = 8
    RULE_return_type = 9
    RULE_block = 10
    RULE_statement = 11
    RULE_method_call_inter = 12
    RULE_method_call = 13
    RULE_expr = 14
    RULE_literal = 15
    RULE_location = 16
    RULE_callout_arg = 17
    RULE_int_literal = 18
    RULE_string_literal = 19
    RULE_bool_literal = 20
    RULE_rel_op = 21
    RULE_eq_op = 22
    RULE_cond_op = 23
    RULE_bin_op = 24
    RULE_arith_op = 25
    RULE_var_type = 26
    RULE_assign_op = 27
    RULE_method_name = 28

    ruleNames =  [ "program", "declaration", "vardeclr", "field_declr", 
                   "array_id", "field_var", "var_id", "struct_declr", "method_declr", 
                   "return_type", "block", "statement", "method_call_inter", 
                   "method_call", "expr", "literal", "location", "callout_arg", 
                   "int_literal", "string_literal", "bool_literal", "rel_op", 
                   "eq_op", "cond_op", "bin_op", "arith_op", "var_type", 
                   "assign_op", "method_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    CLASS=3
    PROGRAM=4
    IF=5
    ELSE=6
    FOR=7
    WHILE=8
    RETURN=9
    BREAK=10
    CONTINUE=11
    BOOLEAN=12
    CHAR=13
    INT=14
    STRING=15
    VOID=16
    STRUCT=17
    CALLOUT=18
    SEMICOLON=19
    LCURLY=20
    RCURLY=21
    LSQUARE=22
    RSQUARE=23
    LROUND=24
    RROUND=25
    COMMA=26
    QUOTES=27
    APOSTROPHE=28
    ADD=29
    SUB=30
    MULTIPLY=31
    DIVIDE=32
    REMINDER=33
    AND=34
    OR=35
    NOT=36
    GREATER_OP=37
    LESS_OP=38
    GREATER_eq_op=39
    LESS_eq_op=40
    EQUAL_OP=41
    ADD_eq_op=42
    SUB_eq_op=43
    EQUALITY_OP=44
    UNEQUALITY_OP=45
    POINT=46
    ID=47
    ALPHA=48
    DECIMAL_LITERAL=49
    DIGIT=50
    STRING_LITERAL=51
    ALPHA_NUM=52
    HEX_DIGIT=53
    LINE_COMMENT=54
    COMMENT=55
    NEWLINE=56
    WHITESPACE=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(DecafParser.CLASS, 0)

        def PROGRAM(self):
            return self.getToken(DecafParser.PROGRAM, 0)

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DecafParser.DeclarationContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = DecafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(DecafParser.CLASS)
            self.state = 59
            self.match(DecafParser.PROGRAM)
            self.state = 60
            self.match(DecafParser.LCURLY)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.BOOLEAN) | (1 << DecafParser.INT) | (1 << DecafParser.STRING) | (1 << DecafParser.VOID) | (1 << DecafParser.STRUCT))) != 0):
                self.state = 61
                self.declaration()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.match(DecafParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_declr(self):
            return self.getTypedRuleContext(DecafParser.Struct_declrContext,0)


        def vardeclr(self):
            return self.getTypedRuleContext(DecafParser.VardeclrContext,0)


        def method_declr(self):
            return self.getTypedRuleContext(DecafParser.Method_declrContext,0)


        def field_declr(self):
            return self.getTypedRuleContext(DecafParser.Field_declrContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = DecafParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.struct_declr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.vardeclr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.method_declr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.field_declr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(DecafParser.SEMICOLON, 0)

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_typeContext,i)


        def field_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_varContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_varContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_vardeclr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardeclr" ):
                listener.enterVardeclr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardeclr" ):
                listener.exitVardeclr(self)




    def vardeclr(self):

        localctx = DecafParser.VardeclrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardeclr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.var_type()
            self.state = 76
            self.field_var()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.COMMA:
                self.state = 78
                self.match(DecafParser.COMMA)
                self.state = 79
                self.var_type()
                self.state = 80
                self.field_var()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(DecafParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(DecafParser.Var_typeContext,0)


        def field_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_varContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_varContext,i)


        def SEMICOLON(self):
            return self.getToken(DecafParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_field_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_declr" ):
                listener.enterField_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_declr" ):
                listener.exitField_declr(self)




    def field_declr(self):

        localctx = DecafParser.Field_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_field_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.var_type()
            self.state = 90
            self.field_var()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.COMMA:
                self.state = 91
                self.match(DecafParser.COMMA)
                self.state = 92
                self.field_var()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(DecafParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def LSQUARE(self):
            return self.getToken(DecafParser.LSQUARE, 0)

        def RSQUARE(self):
            return self.getToken(DecafParser.RSQUARE, 0)

        def int_literal(self):
            return self.getTypedRuleContext(DecafParser.Int_literalContext,0)


        def var_id(self):
            return self.getTypedRuleContext(DecafParser.Var_idContext,0)


        def POINT(self):
            return self.getToken(DecafParser.POINT, 0)

        def location(self):
            return self.getTypedRuleContext(DecafParser.LocationContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_array_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_id" ):
                listener.enterArray_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_id" ):
                listener.exitArray_id(self)




    def array_id(self):

        localctx = DecafParser.Array_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(DecafParser.ID)
            self.state = 101
            self.match(DecafParser.LSQUARE)
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DecafParser.DECIMAL_LITERAL]:
                self.state = 102
                self.int_literal()
                pass
            elif token in [DecafParser.ID]:
                self.state = 103
                self.var_id()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 106
            self.match(DecafParser.RSQUARE)
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 107
                self.match(DecafParser.POINT)
                self.state = 108
                self.location()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_id(self):
            return self.getTypedRuleContext(DecafParser.Var_idContext,0)


        def array_id(self):
            return self.getTypedRuleContext(DecafParser.Array_idContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_field_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_var" ):
                listener.enterField_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_var" ):
                listener.exitField_var(self)




    def field_var(self):

        localctx = DecafParser.Field_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_field_var)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.var_id()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.array_id()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def POINT(self):
            return self.getToken(DecafParser.POINT, 0)

        def location(self):
            return self.getTypedRuleContext(DecafParser.LocationContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_var_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_id" ):
                listener.enterVar_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_id" ):
                listener.exitVar_id(self)




    def var_id(self):

        localctx = DecafParser.Var_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(DecafParser.ID)
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 116
                self.match(DecafParser.POINT)
                self.state = 117
                self.location()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(DecafParser.STRUCT, 0)

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def SEMICOLON(self):
            return self.getToken(DecafParser.SEMICOLON, 0)

        def vardeclr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.VardeclrContext)
            else:
                return self.getTypedRuleContext(DecafParser.VardeclrContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_struct_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_declr" ):
                listener.enterStruct_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_declr" ):
                listener.exitStruct_declr(self)




    def struct_declr(self):

        localctx = DecafParser.Struct_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_struct_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(DecafParser.STRUCT)
            self.state = 121
            self.match(DecafParser.ID)
            self.state = 122
            self.match(DecafParser.LCURLY)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.BOOLEAN) | (1 << DecafParser.INT) | (1 << DecafParser.STRING) | (1 << DecafParser.STRUCT))) != 0):
                self.state = 123
                self.vardeclr()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self.match(DecafParser.RCURLY)
            self.state = 130
            self.match(DecafParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(DecafParser.Return_typeContext,0)


        def method_name(self):
            return self.getTypedRuleContext(DecafParser.Method_nameContext,0)


        def LROUND(self):
            return self.getToken(DecafParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(DecafParser.RROUND, 0)

        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)


        def VOID(self):
            return self.getToken(DecafParser.VOID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_typeContext,i)


        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_idContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_idContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_method_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_declr" ):
                listener.enterMethod_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_declr" ):
                listener.exitMethod_declr(self)




    def method_declr(self):

        localctx = DecafParser.Method_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.return_type()
            self.state = 133
            self.method_name()
            self.state = 134
            self.match(DecafParser.LROUND)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.BOOLEAN) | (1 << DecafParser.INT) | (1 << DecafParser.STRING) | (1 << DecafParser.VOID) | (1 << DecafParser.STRUCT))) != 0):
                self.state = 139
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [DecafParser.BOOLEAN, DecafParser.INT, DecafParser.STRING, DecafParser.STRUCT]:
                    self.state = 135
                    self.var_type()
                    self.state = 136
                    self.var_id()
                    pass
                elif token in [DecafParser.VOID]:
                    self.state = 138
                    self.match(DecafParser.VOID)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DecafParser.COMMA:
                    self.state = 141
                    self.match(DecafParser.COMMA)
                    self.state = 142
                    self.var_type()
                    self.state = 143
                    self.var_id()
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 152
            self.match(DecafParser.RROUND)
            self.state = 153
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(DecafParser.Var_typeContext,0)


        def VOID(self):
            return self.getToken(DecafParser.VOID, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_return_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_type" ):
                listener.enterReturn_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_type" ):
                listener.exitReturn_type(self)




    def return_type(self):

        localctx = DecafParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_return_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DecafParser.BOOLEAN, DecafParser.INT, DecafParser.STRING, DecafParser.STRUCT]:
                self.state = 155
                self.var_type()
                pass
            elif token in [DecafParser.VOID]:
                self.state = 156
                self.match(DecafParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def vardeclr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.VardeclrContext)
            else:
                return self.getTypedRuleContext(DecafParser.VardeclrContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.StatementContext)
            else:
                return self.getTypedRuleContext(DecafParser.StatementContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = DecafParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(DecafParser.LCURLY)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.BOOLEAN) | (1 << DecafParser.INT) | (1 << DecafParser.STRING) | (1 << DecafParser.STRUCT))) != 0):
                self.state = 160
                self.vardeclr()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.IF) | (1 << DecafParser.FOR) | (1 << DecafParser.WHILE) | (1 << DecafParser.RETURN) | (1 << DecafParser.BREAK) | (1 << DecafParser.CALLOUT) | (1 << DecafParser.ID))) != 0):
                self.state = 166
                self.statement()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.match(DecafParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def location(self):
            return self.getTypedRuleContext(DecafParser.LocationContext,0)


        def assign_op(self):
            return self.getTypedRuleContext(DecafParser.Assign_opContext,0)


        def expr(self):
            return self.getTypedRuleContext(DecafParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(DecafParser.SEMICOLON, 0)

        def method_call(self):
            return self.getTypedRuleContext(DecafParser.Method_callContext,0)


        def IF(self):
            return self.getToken(DecafParser.IF, 0)

        def LROUND(self):
            return self.getToken(DecafParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(DecafParser.RROUND, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.BlockContext)
            else:
                return self.getTypedRuleContext(DecafParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(DecafParser.ELSE, 0)

        def WHILE(self):
            return self.getToken(DecafParser.WHILE, 0)

        def EQUAL_OP(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.EQUAL_OP)
            else:
                return self.getToken(DecafParser.EQUAL_OP, i)

        def RETURN(self):
            return self.getToken(DecafParser.RETURN, 0)

        def FOR(self):
            return self.getToken(DecafParser.FOR, 0)

        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_idContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_idContext,i)


        def COMMA(self):
            return self.getToken(DecafParser.COMMA, 0)
